# HAnswer

./: .gitignore  AGENTS.md  CLAUDE.md  HAAnswers.md  HASys.md  HAViz.md  HAnswerR.md  P2S.md  README.md  Rinit.md  Unfinished.md  docker-compose.yml
backend/: alembic.ini  config.example.toml  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/db/: __init__.py  models.py  repo.py  session.py
backend/app/prompts/: __init__.py  base.py  cli.py  dialog_prompt.py  parser_prompt.py  registry.py  schemas.py  solver_prompt.py  variant_synth_prompt.py  vizcoder_prompt.py  vizitem_prompt.py  vizplanner_prompt.py
backend/app/routers/: __init__.py  admin.py  answer.py  dialog.py  ingest.py  (+3 more)
backend/migrations/: env.py
backend/scripts/: __init__.py  rebuild_retrieval_index.py  seed_knowledge.py  smoke_parse.py
backend/tests/: __init__.py  conftest.py  test_answer_job_service.py  test_answer_resume.py  test_delete_endpoints.py  test_dialog_router.py  test_embedding_switch.py  test_exam_service.py  test_gemini_transport.py  test_ingest_service.py  test_knowledge_detail_and_config.py  test_knowledge_router.py  test_library_listing.py  test_llm_cost_router.py  test_milvus_setup.py  test_multi_route_retrieval.py  test_pg_cost_ledger.py  test_prompt_log_file.py  test_prompts.py  test_sediment_and_retrieval.py  test_solver_service.py  test_stage_review_service.py  test_streaming_json.py  test_vector_store_milvus.py  test_viz_validator.py  test_vizcoder_geogebra.py
backend/viz_validator/: README.md  package-lock.json  package.json  validate.mjs
(+69 files in other folders)
